# online

./: .gitignore  .hlint.yaml  .travis.yml  .weeder.yaml  bench.md  cabal.project  index.html  online.cabal  package.yaml  readme.html  readme.lhs  readme.md  stack.yaml
bench/: bench.hs
examples/: examples.hs  examples.md
online/: online.cabal  package.yaml  stack.yaml
online-bench/: bench.hs  bench.lhs  online-bench.cabal  package.yaml  stack.yaml
online/src/: Online.hs
online/src/Online/: Averages.hs  AveragesB.hs  Medians.hs  Quantiles.hs  Reversable.hs
online/test/: test.hs
other/: basic_stats.md  digitize.md  perf.md  quantiles.md  readme_.md  simplema.md  tick.md  tick_.md  ticks.md
src/: Online.hs
src/Online/: Averages.hs  Deaverage.hs  Histogram.hs  Quantiles.hs  Stats.hs  StatsL1.hs
test/: test.hs
