cabal-version: 2.0
name:           online-bench
version:        0.0.1.0
synopsis:       online benchmarking
description:    benchmarking of online library
category:       statistics
homepage:       https://github.com/tonyday567/online#readme
bug-reports:    https://github.com/tonyday567/online/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      Tony Day
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/tonyday567/online

executable online-bench
  main-is: bench.lhs
  hs-source-dirs:
      ./
  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
  ghc-options: -O2 -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , foldl
    , online
    , optparse-generic
    , perf
    , perf-analysis
    , text
    , readme-lhs
  default-language: Haskell2010
